# lem-in

./: .gitignore  1.txt  2.txt  3.txt  4.txt  CMakeLists.txt  Makefile  algoritm  ants.c  author  bfs.c  big.txt  bonus.c  collisions.c  frees.c  functions.c  lem-in.c  lem_in.c  lem_in.h  linked_list.c  links.c  main.c  main_loop.c  map.c  master_loop.c  paths.c  queue.c  rooms.c  superb.txt  test.c  todo.txt  ttt.txt  validation.c  validation_add.c  vvv
inc/: lem_in.h
libft/: CMakeLists.txt  Makefile  ft_error.c  ft_max_n.c  ft_min_n.c  ft_mod_n.c  ft_strchr.c  ft_strcpy_wm.c  ft_strsplit.c  libft.h  printf.h
libft/inc/: printf.h
libft/libft/: Makefile  ft_atoi.c  ft_atoi_wr.c  ft_bzero.c  ft_free_two_demention.c  ft_max_n.c  ft_memalloc.c  ft_min_n.c  ft_mod_n.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strndup.c  ft_strnew.c  ft_strnsplit.c  ft_strsplit.c  get_next_line.c  libft.h
libft/prinft/: add_func.c  adv_itoa.c  ft_printf.c  handling_f.c  handling_lf.c  new_hf.c  parsing.c  type_c.c  type_f.c  type_f_add.c  type_other.c  type_p.c  type_s.c  type_u.c  type_x.c
libft/printf/: add_func.c  adv_itoa.c  ap_arith.c  ft_printf.c  handling_f.c  handling_lf.c  new_hf.c  nulz.c  parsing.c  type_b.c  type_c.c  type_di.c  type_di_add.c  type_f.c  type_f_add.c  type_o.c  type_other.c  type_p.c  type_s.c  type_u.c  type_x.c
maps/: 4.txt  algoritm  b1.txt  break.txt  err.txt  flowone.txt  test98.txt  ttt.txt
printf/: Makefile
printf/includes/: printf.h
printf/src/: add_func.c  adv_itoa.c  (+18 more)
src/: ants.c  bonus.c  collisions.c  frees.c  functions.c  lem_in.c  links.c  main.c  map.c  paths.c  queue.c  rooms.c  validation.c  validation_add.c
(+77 files in other folders)
